google auth half working

--- a/synthura/src/.env
+++ b/synthura/src/.env
@@ -1,2 +1,2 @@
-GOOGLE_OAUTH_CLIENT_ID='581189616604-pr82ronvl9asp6pmsb780qn3dm69crrq.apps.googleusercontent.com'
-GOOGLE_OAUTH_CLIENT_SECRET='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'
+#GOOGLE_OAUTH_CLIENT_ID='581189616604-pr82ronvl9asp6pmsb780qn3dm69crrq.apps.googleusercontent.com'
+#GOOGLE_OAUTH_CLIENT_SECRET='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'
