--- a/synthura/package.json
+++ b/synthura/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
     "gapi-script": "^1.2.0",
+    "mongodb": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
