--- a/synthura/package.json
+++ b/synthura/package.json
@@ -17,7 +17,8 @@
     "mongodb": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-player": "2.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
