--- a/synthura/package.json
+++ b/synthura/package.json
@@ -7,27 +7,36 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@testing-library/react": "^15.0.7",
     "axios": "^1.6.8",
     "express": "^4.19.2",
     "gapi-script": "^1.2.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mongodb": "^6.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-player": "2.13.0"
+    "react-player": "2.13.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.3.1",
     "vite": "^5.2.0"
   }
 }
