--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Navigate to synthura directory
-        run: cd Synthura/synthura
+        run: cd synthura
 
       - name: Install dependencies
         run: npm install
