--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Navigate to synthura directory
-        run: cd synthura
-
       - name: Install dependencies
         run: npm install
+        working-directory: ./synthura
 
       - name: Run Jest tests
         run: npm test
