--- a/synthura/package.json
+++ b/synthura/package.json
@@ -11,17 +11,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/react": "^15.0.7",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "gapi-script": "^1.2.0",
     "jest-environment-jsdom": "^29.7.0",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "2.13.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "realm-web": "^2.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
@@ -37,6 +41,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.3.1",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-mkcert": "^1.17.5"
   }
 }
