--- a/synthura/package.json
+++ b/synthura/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "gapi-script": "^1.2.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mkcert": "^3.2.0",
     "mongodb": "^6.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
