--- a/synthura/package.json
+++ b/synthura/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "2.13.0",
+    "react-router-dom": "^6.23.1",
     "realm-web": "^2.0.0"
   },
   "devDependencies": {
